C/cloudbees-sidecar-injector-l1qf8S/cloudbees-sidecar-injector.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudbees-sidecar-injector
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: cloudbees-sidecar-injector
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: cloudbees-sidecar-injector
    app.kubernetes.io/component: cloudbees-sidecar-injector
    cloudbees: sidecar-injector
spec:
  ports:
    - port: 443
      targetPort: 8443
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: cloudbees-sidecar-injector
    app.kubernetes.io/component: cloudbees-sidecar-injector
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudbees-sidecar-injector
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: cloudbees-sidecar-injector
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: cloudbees-sidecar-injector
    app.kubernetes.io/component: cloudbees-sidecar-injector
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: cloudbees-sidecar-injector
      app.kubernetes.io/managed-by: Helm
      helm.sh/chart: cloudbees-sidecar-injector
      app.kubernetes.io/component: cloudbees-sidecar-injector
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/name: cloudbees-sidecar-injector
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: cloudbees-sidecar-injector
        app.kubernetes.io/component: cloudbees-sidecar-injector
      annotations:
        com.cloudbees.sidecar-injector/inject: "false"
    spec:
      serviceAccountName: cloudbees-sidecar-injector
      containers:
        - name: sidecar-injector-webhook
          image: cloudbees/sidecar-injector:2.3.1
          imagePullPolicy: IfNotPresent
          args:
            - --webhookConfigName=release-name
            - --configFile=/etc/cloudbees/config/sidecarconfig.yaml
            - --caCertFile=/etc/cloudbees/certs/tls.crt
            - --tlsCertFile=/etc/cloudbees/certs/tls.crt
            - --tlsKeyFile=/etc/cloudbees/certs/tls.key
            - --port=8443
          volumeMounts:
            - name: certs
              mountPath: /etc/cloudbees/certs
              readOnly: true
            - name: config
              mountPath: /etc/cloudbees/config
              readOnly: true
          resources: null
      volumes:
        - name: certs
          secret:
            secretName: cloudbees-sidecar-injector
        - name: config
          configMap:
            name: cloudbees-sidecar-injector
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/os
                    operator: In
                    values:
                      - linux
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
                      - ppc64le
                      - s390x
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 2
              preference:
                matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
            - weight: 2
              preference:
                matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - ppc64le
            - weight: 2
              preference:
                matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - s390x
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: release-name
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: cloudbees-sidecar-injector
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: cloudbees-sidecar-injector
    app.kubernetes.io/component: cloudbees-sidecar-injector
webhooks:
  - name: com.cloudbees.sidecar-injector
    admissionReviewVersions:
      - v1
    sideEffects: None
    clientConfig:
      service:
        name: cloudbees-sidecar-injector
        namespace: default
        path: /mutate
      caBundle: ""
    rules:
      - operations:
          - CREATE
        apiGroups:
          - ""
        apiVersions:
          - v1
        resources:
          - pods
    namespaceSelector:
      matchLabels:
        sidecar-injector: enabled
